# an2cn

./: .gitignore  README.md  pyproject.toml
an2cn/: __init__.py  cli.py  conf.py  core.py  utils.py
src/an2cn/: cli.py  conf.py  core.py  utils.py
tests/: test_all.py  test_core.py  test_utils.py
