[tool.poetry]
name = "an2cn"
version = "0.1.1"
description = ""
authors = ["Jason Swift <anemele@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.scripts]
an2cn = "an2cn.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
