[project]
name = "an2cn"
version = "0.1.1"
description = "Convert Arabic numerals to Chinese numerals"
keywords = ["arabic", "chinese", "numeral"]
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
an2cn = "an2cn.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
